--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 					<ul>
 						<li><a href="index.html">Inicio</a></li>
 						<li><a href="TerminosyCondiciones.html">TyC</a></li>
-						<li><a href="elements.html">Elements</a></li>
+						<!--<li><a href="elements.html">Elements</a></li>-->
                         <li><a href="descargar.html">Descargar</a></li>
 					</ul>
 				</nav>
