--- a/index.html
+++ b/index.html
@@ -104,25 +104,25 @@
 						<div class="row">
 							<section class="3u 6u(medium) 12u$(xsmall) profile" style="text-align:center">
 								<!--<img src="images/profile_placeholder.gif" alt="" />-->
-                                <i class="icon medium rounded color6 fa-file-o fa-lg" ></i>
+                                <i class="icon medium rounded color6 fa-file-o fa-2x" ></i>
 								<h4>Evite imprimir volantes</h4>
 								<!--<p>Lorem ipsum dolor</p>-->
 							</section>
 							<section class="3u 6u$(medium) 12u$(xsmall) profile" style="text-align:center">
 								<!--<img src="images/profile_placeholder.gif" alt="" />-->
-                                <i class="icon medium rounded color9 fa-user-plus fa-lg" ></i>
+                                <i class="icon medium rounded color9 fa-user-plus fa-2x" ></i>
 								<h4>Atrae clientes</h4>
 								<!--<p>Ullam nihil repudi</p>-->
 							</section>
 							<section class="3u 6u(medium) 12u$(xsmall) profile" style="text-align:center">
 								<!--<img src="images/profile_placeholder.gif" alt="" />-->
-                                <i class="icon medium rounded color9 fa-clock-o fa-lg" ></i>
+                                <i class="icon medium rounded color9 fa-clock-o fa-2x" ></i>
 								<h4>Reduzca tiempo en sus decisiones</h4>
 								<!--<p>Harum corrupti quia</p>-->
 							</section>
 							<section class="3u$ 6u$(medium) 12u$(xsmall) profile" style="text-align:center">
 								<!--<img src="images/profile_placeholder.gif" alt="" />-->
-                                <i class="icon medium rounded color6 fa-users fa-lg" ></i>
+                                <i class="icon medium rounded color6 fa-users fa-2x" ></i>
 								<h4>Evite hacer colas innecesarias</h4>
 								<!--<p>Et natus sapiente</p>-->
 							</section>
@@ -231,7 +231,7 @@
 								<li>
 									<a class="icon rounded fa-facebook" href="https://www.facebook.com/Appmuerzo" target="_blank"><span class="label">Facebook</span></a>
 								</li>
-                                <li><a href="https://www.facebook.com/Appmuerzo" target="_blank"><p>S&iacute;guenos en Facebook</p></a></li>
+                                <li><a href="https://www.facebook.com/Appmuerzo" target="_blank"><p>Encu&eacute;ntranos en Facebook</p></a></li>
 							</ul>
 						</div>
 					</div>
