--- a/index.html
+++ b/index.html
@@ -221,7 +221,8 @@
 					<div class="row">
 						<div class="6u 12u$(medium)">
 							<ul class="copyright">
-								<!--<li>&copy; Untitled. All rights reserved.</li>--><li>Appmuerzo</li>
+								<!--<li>&copy; Untitled. All rights reserved.</li><li>Appmuerzo</li>-->
+								<li>&copy; Appmuerzo</li>
 								<li>Design: <a href="http://templated.co" target="_blank">TEMPLATED</a></li>
 								<li>Images: <a href="http://unsplash.com" target="_blank">Unsplash</a> <a href="https://picjumbo.com/just-soup/" target="_blank">picjumbo</a></li>
 							</ul>
