--- a/TerminosyCondiciones.html
+++ b/TerminosyCondiciones.html
@@ -46,7 +46,7 @@
 						<p>-En desarrollo-</p>
 					</header>
 					<!-- -->
-                    <p>En desarrollo - En revisi&oacute;</p>
+                    <p>En desarrollo - En revisi&oacute;n</p>
 					<p>Appmuerzo (en adelante tambi&eacute;n llamado: nosotros, el desarrollador, la empresa, el servicio, la aplicaci&oacute;n, la compa&ntilde;ia).<br />
 Esta pol&iacute;tica de privacidad no se aplica a cualquier otro sitio web o punto de contacto sin conexi&oacute;n entre la Compa&ntilde;&iacute;a y usted o cualquier otra parte. <br />
 Estos t&eacute;rminos pueden variar sin previo aviso,d ejando sin efecto las versiones anteriores.<br />
