--- a/TerminosyCondiciones.html
+++ b/TerminosyCondiciones.html
@@ -49,21 +49,21 @@
                     <p>En desarrollo - En revisi&oacute;n</p>
 					<p>Appmuerzo (en adelante tambi&eacute;n llamado: nosotros, el desarrollador, la empresa, el servicio, la aplicaci&oacute;n, la compa&ntilde;ia).<br />
 Esta pol&iacute;tica de privacidad no se aplica a cualquier otro sitio web o punto de contacto sin conexi&oacute;n entre la Compa&ntilde;&iacute;a y usted o cualquier otra parte. <br />
-Estos t&eacute;rminos pueden variar sin previo aviso,d ejando sin efecto las versiones anteriores.<br />
-Appmuerzo Se excluye de toda responsabilidad sobre el uso de la aplicaci&oacute;n.<br />
+Estos t&eacute;rminos pueden variar sin previo aviso, dejando sin efecto las versiones anteriores.<br />
+Appmuerzo se excluye de toda responsabilidad sobre el uso de la aplicaci&oacute;n.<br />
 El servicio se ofrece &quot;as is&quot;.<br />
 El servicio no se responsabiliza por el uso de Esta aplicaci&oacute;n ni los Datos subidos o mostrados.<br />
 El servicio no solicita, ni obtiene, ni guarda en servidores datos personales.<br />
-El servicio guarda Su ubicaci&oacute;n y el contenido llenado en el formulario en el caso de los restaurantes.<br />
+El servicio guarda su ubicaci&oacute;n y el contenido llenado en el formulario en el caso de los restaurantes.<br />
 En el caso del usuario en general el servicio no guarda ning&uacute;n dato durante Su uso.<br />
 No se env&iacute;a informaci&oacute;n a terceros. Los datos almacenados se eliminan a partir de Las 24 horas de la publicaci&oacute;n.<br />
 El servicio requiere tener activada la funci&oacute;n de localizaci&oacute;n en el dispositivo m&oacute;vil.<br />
 Su ubicaci&oacute;n es obtenida gracias a las capacidades del equipo o el dispositivo m&oacute;vil que este utilizando.<br />
 El servicio esta disponible para la tienda de Windows phone para Per&uacute; en lenguaje espa&ntilde;ol.<br />
-Puede ser usado por otros pa&iacute;ses bajo Su propio riesgo.<br />
+<!--Puede ser usado por otros pa&iacute;ses bajo Su propio riesgo.<br />-->
 Appmuerzo no garantiza la disponibilidad 24/7 del servicio.<br />
 Appmuerzo no se responsabiliza por el contenido publicado en el servicio. Appmuerzo se reserva el derecho de eliminar contenido que considera inapropiado y diferente a cartas de men&uacute; de restaurants o que vaya en contra de los TyC.<br />
-P&uacute;blico: Para Publicaci&oacute;n Solo mayores de 18 a&ntilde;os.Categor&iacute;a M.<br />
+<!--P&uacute;blico: Para Publicaci&oacute;n Solo mayores de 18 a&ntilde;os.Categor&iacute;a M.<br />-->
 Servicio de publicaci&oacute;n de carta de men&uacute; destinado a restaurantes de men&uacute; con precio promedio por Plato a menor o igual 20 soles.<br />
 Ubicaci&oacute;n: Existe un margen de error del(Por Actualizar) 50 metros, no garantizado.<br />
 No se garantiza la exactitud del proceso de ubicaci&oacute;n, el cual depende de dispositivo. No se permite el uso del servicio fuera de la aplicaci&oacute;n. <br />
