--- a/TerminosyCondiciones.html
+++ b/TerminosyCondiciones.html
@@ -137,7 +137,7 @@ Al continuar accediendo o utilizando los Servicios despu&eacute;s de efectuados 
 								<li>
 									<a class="icon rounded fa-facebook" href="https://www.facebook.com/Almorzarhoy"><span class="label">Facebook</span></a>
 								</li>
-                                <li><a href="https://www.facebook.com/Almorzarhoy"><p>S&iacute;guenos en Facebook</p></li>
+                                <li><a href="https://www.facebook.com/Almorzarhoy"><p>Encu&eacute;ntranos en Facebook</p></li>
 							</ul>
 						</div>
 					</div>
