--- a/TerminosyCondiciones.html
+++ b/TerminosyCondiciones.html
@@ -54,6 +54,7 @@ Appmuerzo se excluye de toda responsabilidad sobre el uso de la aplicaci&oacute;
 El servicio se ofrece &quot;as is&quot;.<br />
 El servicio no se responsabiliza por el uso de Esta aplicaci&oacute;n ni los Datos subidos o mostrados.<br />
 El servicio no solicita, ni obtiene, ni guarda en servidores datos personales.<br />
+Al usar el servicio, usted da a Appmuerzo LICENCIA PARA PUBLICAR Y ALMACENAR LOS DATOS QUE USTED HA COLOCADO VOLUNTARIAMENTE EL LA APLICACIÓN.<br />
 El servicio guarda su ubicaci&oacute;n y el contenido llenado en el formulario en el caso de los restaurantes.<br />
 En el caso del usuario en general el servicio no guarda ning&uacute;n dato durante Su uso.<br />
 No se env&iacute;a informaci&oacute;n a terceros. Los datos almacenados se eliminan a partir de Las 24 horas de la publicaci&oacute;n.<br />
