--- a/Blog.html
+++ b/Blog.html
@@ -31,7 +31,7 @@
 					<ul>
 						<li><a href="index.html">Inicio</a></li>
 						<li><a href="TerminosyCondiciones.html">TyC</a></li>
-						<a href="Blog.html">Blog</a>
+						<li><a href="Blog.html">Blog</a></li>
 					</ul>
 				</nav>
 			</header>
