--- a/TerminosyCondiciones.html
+++ b/TerminosyCondiciones.html
@@ -31,6 +31,7 @@
 					<ul>
 						<li><a href="index.html">Inicio</a></li>
 						<li><a href="TerminosyCondiciones.html">TyC</a></li>
+						<li><a href="Blog.html">Blog</a></li>
 						<!--<li><a href="elements.html">Elements</a></li>
 						<li><a href="#" class="button special">Sign Up</a></li>-->
 					</ul>
