--- a/Blog.html
+++ b/Blog.html
@@ -56,7 +56,7 @@
 					<div class="row">
 						<div class="6u 12u$(medium)">
 							<ul class="copyright">
-								<!--<li>&copy; Untitled. All rights reserved.</li>--><li>Appmuerzo</li>
+								<!--<li>&copy; Untitled. All rights reserved.</li>--><li>&copy; Appmuerzo</li>
 								<li>Design: <a href="http://templated.co">TEMPLATED</a></li>
 								<li>Images: <a href="http://unsplash.com">Unsplash</a></li>
 							</ul>
