--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						<li><a href="TerminosyCondiciones.html">TyC</a></li>
 						<li><a href="Blog.html">Blog</a></li>
 						<!--<li><a href="elements.html">Elements</a></li>-->
-                        <li><a href="descargar.html">Descargar</a></li>
+                        <li><a href="http://www.windowsphone.com/es-pe/store/app/appmuerzo/89444097-a36a-4c49-9439-17d60b01a019" target="_blank">Descargar</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -133,7 +133,7 @@
 						<p>El servicio corre sobre Microsoft Azure, descubre m&aacute;s <a href="http://azure.microsoft.com/es-es/overview/what-is-azure/" target="_blank" style="color:blue">aqu&iacute;</a></p>
 						<ul class="actions">
 							<li>
-								<a href="#" class="button big">Pr&oacute;ximamente</a>
+								<a href="http://www.windowsphone.com/es-pe/store/app/appmuerzo/89444097-a36a-4c49-9439-17d60b01a019" target="_blank" class="button big">Descargar</a>
 							</li>
 						</ul>
 					</footer>
