--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		<!-- Banner -->
 			<section id="banner">
 				<h2>Appmuerzo</h2>
-				<p>Muy Pronto</p>
+				<p>Nueva App</p>
 				<ul class="actions">
 					<li>
 						<a href="#one" class="button big">Detalles...</a>
@@ -65,7 +65,7 @@
 			<section id="one" class="wrapper style1 special">
 				<div class="container">
 					<header class="major">
-						<h2>Nueva app, muy pronto disponible para Windows Phone</h2>
+						<h2>Nueva app, disponible para Windows Phone</h2>
 						<p>es gratis y no necesitas registrarte</p>
 					</header>
 					<div class="row 150%">
