--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 						<p>El servicio corre sobre Microsoft Azure, descubre m&aacute;s <a href="http://azure.microsoft.com/es-es/overview/what-is-azure/" target="_blank" style="color:blue">aqu&iacute;</a></p>
 						<ul class="actions">
 							<li>
-								<a href="http://apps.microsoft.com/windows/app/89444097-a36a-4c49-9439-17d60b01a019"><img src="https://cmsresources.windowsphone.com/devcenter/en-us/legacy_v1/img/badgegenerator/Spanish_wstore_cyan_258x67.png" alt="Download from Windows Store" /></a>
+								<a href="http://www.windowsphone.com/s?appid=89444097-a36a-4c49-9439-17d60b01a019"><img src="https://cmsresources.windowsphone.com/devcenter/en-us/legacy_v1/img/badgegenerator/Spanish_wphone_cyan_258x67.png" alt="Download from Windows Store" /></a>
 								<!--<a href="http://www.windowsphone.com/es-pe/store/app/appmuerzo/89444097-a36a-4c49-9439-17d60b01a019" target="_blank" class="button big">Descargar</a>-->
 							</li>
 						</ul>
