--- a/TerminosyCondiciones.html
+++ b/TerminosyCondiciones.html
@@ -55,7 +55,6 @@ Appmuerzo se excluye de toda responsabilidad sobre el uso de la aplicaci&oacute;
 El servicio se ofrece &quot;as is&quot;.<br />
 El servicio no se responsabiliza por el uso de Esta aplicaci&oacute;n ni los Datos subidos o mostrados.<br />
 El servicio no solicita, ni obtiene, ni guarda en servidores datos personales.<br />
-Al usar el servicio, usted da a Appmuerzo LICENCIA PARA PUBLICAR Y ALMACENAR LOS DATOS QUE USTED HA COLOCADO VOLUNTARIAMENTE EL LA APLICACIÓN.<br />
 El servicio guarda su ubicaci&oacute;n y el contenido llenado en el formulario en el caso de los restaurantes.<br />
 En el caso del usuario en general el servicio no guarda ning&uacute;n dato durante Su uso.<br />
 No se env&iacute;a informaci&oacute;n a terceros. Los datos almacenados se eliminan a partir de Las 24 horas de la publicaci&oacute;n.<br />
@@ -94,9 +93,9 @@ Al continuar accediendo o utilizando los Servicios despu&eacute;s de efectuados 
 						<div class="6u$ 12u$(medium)">
 							<ul class="icons">
 								<li>
-									<a class="icon rounded fa-facebook" href="https://www.facebook.com/Almorzarhoy"><span class="label">Facebook</span></a>
+									<a class="icon rounded fa-facebook" href="https://www.facebook.com/Appmuerzo"><span class="label">Facebook</span></a>
 								</li>
-                                <li><a href="https://www.facebook.com/Almorzarhoy"><p>Encu&eacute;ntranos en Facebook</p></li>
+                                <li><a href="https://www.facebook.com/Appmuerzo"><p>Encu&eacute;ntranos en Facebook</p></li>
 							</ul>
 						</div>
 					</div>
