--- a/Blog.html
+++ b/Blog.html
@@ -64,9 +64,9 @@
 						<div class="6u$ 12u$(medium)">
 							<ul class="icons">
 								<li>
-									<a class="icon rounded fa-facebook" href="https://www.facebook.com/Almorzarhoy"><span class="label">Facebook</span></a>
+									<a class="icon rounded fa-facebook" href="https://www.facebook.com/Appmuerzo"><span class="label">Facebook</span></a>
 								</li>
-                                <li><a href="https://www.facebook.com/Almorzarhoy"><p>Encu&eacute;ntranos en Facebook</p></li>
+                                <li><a href="https://www.facebook.com/Appmuerzo"><p>Encu&eacute;ntranos en Facebook</p></li>
 							</ul>
 						</div>
 					</div>
