--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 			<link rel="stylesheet" href="css/style.css" />
 			<link rel="stylesheet" href="css/style-xlarge.css" />
 		</noscript>
+		<!-- fotorama.css & fotorama.js. -->
+		<link  href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet"> <!-- 3 KB -->
+		<script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script> <!-- 16 KB -->
+		<!---->
         <script>
             $(document).ready(function () {
                 $('a[href^="#"]').on('click', function (e) {
@@ -148,7 +152,15 @@
 			<footer id="footer">
 				<div class="container">
 						<h2 class="major" style="text-align:center">Capturas</h2>
-                        <p  style="text-align:center">Pr&oacute;ximamente</p>
+                        <!--<p  style="text-align:center">Pr&oacute;ximamente</p>-->
+				<!-- 2. Add images to <div class="fotorama"></div>. -->
+				<div class="fotorama">
+			          <img src="http://appmuerzo.com/images/wp_ss_20150624_0001.jpg">
+			          <img src="http://appmuerzo.com/images/wp_ss_20150624_0003.jpg">
+				  <img src="http://appmuerzo.com/images/wp_ss_20150624_0007.jpg">
+				  <img src="http://appmuerzo.com/images/wp_ss_20150624_0008.jpg">
+				</div>
+				<!---->
 			        <section class="links">
 					</section>
 					<div class="row">
