--- a/index.html
+++ b/index.html
@@ -153,13 +153,18 @@
 				<div class="container">
 						<h2 class="major" style="text-align:center">Capturas</h2>
                         <!--<p  style="text-align:center">Pr&oacute;ximamente</p>-->
-				<!-- 2. Add images to <div class="fotorama"></div>. -->
-				<div class="fotorama" style="text-align:center">
-			          <img src="http://appmuerzo.com/images/wp_ss_20150624_0001.jpg">
-			          <img src="http://appmuerzo.com/images/wp_ss_20150624_0003.jpg">
-				  <img src="http://appmuerzo.com/images/wp_ss_20150624_0007.jpg">
-				  <img src="http://appmuerzo.com/images/wp_ss_20150624_0008.jpg">
-				</div>
+					<ul class="actions">
+							<li>
+								<!-- 2. Add images to <div class="fotorama"></div>. -->
+								<div class="fotorama" style="text-align:center">
+							          <img src="http://appmuerzo.com/images/wp_ss_20150624_0001.jpg">
+							          <img src="http://appmuerzo.com/images/wp_ss_20150624_0003.jpg">
+								  <img src="http://appmuerzo.com/images/wp_ss_20150624_0007.jpg">
+								  <img src="http://appmuerzo.com/images/wp_ss_20150624_0008.jpg">
+								</div>
+								<!---->
+							</li>
+						</ul>
 				<!---->
 			        <section class="links">
 					</section>
