--- a/index.html
+++ b/index.html
@@ -150,11 +150,11 @@
 
 		<!-- Footer -->
 			<footer id="footer">
-				<div class="container">
+				<div class="container" style="padding: 30px;">
 						<h2 class="major" style="text-align:center">Capturas</h2>
                         <!--<p  style="text-align:center">Pr&oacute;ximamente</p>-->
 								<!-- 2. Add images to <div class="fotorama"></div>. -->
-								<div class="fotorama" style="margin: 0 auto; width: 400px;">
+								<div class="fotorama" data-loop="true" style="margin: 0 auto; width: 100px;">
 							          <img src="http://appmuerzo.com/images/wp_ss_20150624_0001.jpg">
 							          <img src="http://appmuerzo.com/images/wp_ss_20150624_0003.jpg">
 								  <img src="http://appmuerzo.com/images/wp_ss_20150624_0007.jpg">
