--- a/index.html
+++ b/index.html
@@ -154,14 +154,13 @@
 						<h2 class="major" style="text-align:center">Capturas</h2>
                         <!--<p  style="text-align:center">Pr&oacute;ximamente</p>-->
 								<!-- 2. Add images to <div class="fotorama"></div>. -->
-								<div class="fotorama" data-loop="true" style="display: inline-block;">
+								<div class="fotorama" data-loop="true" data-autoplay="true" style="display: inline-block;">
 							          <img src="http://appmuerzo.com/images/wp_ss_20150624_0001.jpg">
 							          <img src="http://appmuerzo.com/images/wp_ss_20150624_0003.jpg">
 								  <img src="http://appmuerzo.com/images/wp_ss_20150624_0007.jpg">
 								  <img src="http://appmuerzo.com/images/wp_ss_20150624_0008.jpg">
 								</div>
 								<!---->
-
 			        <section class="links">
 					</section>
 					<div class="row">
