--- a/TerminosyCondiciones.html
+++ b/TerminosyCondiciones.html
@@ -56,7 +56,7 @@ El servicio se ofrece &quot;as is&quot;.<br />
 El servicio no se responsabiliza por el uso de Esta aplicaci&oacute;n ni los Datos subidos o mostrados.<br />
 El servicio no solicita, ni obtiene, ni guarda en servidores datos personales.<br />
 El servicio guarda su ubicaci&oacute;n y el contenido llenado en el formulario en el caso de los restaurantes.<br />
-En el caso del usuario en general el servicio no guarda ning&uacute;n dato durante Su uso.<br />
+En el caso del usuario en general el servicio no guarda ning&uacute;n dato durante su uso.<br />
 No se env&iacute;a informaci&oacute;n a terceros. Los datos almacenados se eliminan a partir de Las 24 horas de la publicaci&oacute;n.<br />
 El servicio requiere tener activada la funci&oacute;n de localizaci&oacute;n en el dispositivo m&oacute;vil.<br />
 Su ubicaci&oacute;n es obtenida gracias a las capacidades del equipo o el dispositivo m&oacute;vil que este utilizando.<br />
@@ -69,7 +69,7 @@ Servicio de publicaci&oacute;n de carta de men&uacute; destinado a restaurantes 
 Ubicaci&oacute;n: Existe un margen de error del(Por Actualizar) 50 metros, no garantizado.<br />
 No se garantiza la exactitud del proceso de ubicaci&oacute;n, el cual depende de dispositivo. No se permite el uso del servicio fuera de la aplicaci&oacute;n. <br />
 No se ofrecen API Ni se permite el desarrollo con el servicio a terceros. </p>
-
+<p>clasificaci&oacute;n de edad: 16+</p>
 <p>La Pol&iacute;tica de Privacidad podr&iacute;a ser actualizada en un futuro. <br />
 La versi&oacute;n m&aacute;s reciente de la Pol&iacute;tica regular&aacute; nuestro uso de su informaci&oacute;n y estar&eacute; siempre disponible en http://appmuerzo.azurewebsites.net/TerminosyCondiciones.html. <br />
 Al continuar accediendo o utilizando los Servicios despu&eacute;s de efectuados dichos cambios, el usuario acepta la Pol&iacute;tica de Privacidad actualizada.</p>                    
