--- a/Blog.html
+++ b/Blog.html
@@ -45,7 +45,9 @@
 						<p>-En desarrollo-</p>
 					</header>
 					<!-- -->
-                    <p>En desarrollo - En revisi&oacute;n</p>                   
+                    <p>En desarrollo - En revisi&oacute;n</p>
+                    </br>
+                    <p>25/06/2015 - Primera Publicación</p>
                     <!-- -->
 				</div>
 			</section>
