--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <!--
 	Transit by TEMPLATED
 	templated.co @templatedco
@@ -37,6 +37,12 @@
                 });
             });
         </script>
+        <!--idioma
+        <script type="text/javascript">
+            var userLang = navigator.language || navigator.userLanguage;
+            if (userLang = "en-GB" || "en-US") { window.location.href = "http://appmuerzo/indexEN.html"; }
+        </script>
+        <!--idioma-->
 	</head>
 	<body class="landing">
 
@@ -164,15 +170,16 @@
 			        <section class="links">
 					</section>
 					<div class="row">
-						<div class="6u 12u$(medium)">
+						<div class="8u 12u$(medium)">
 							<ul class="copyright">
 								<!--<li>&copy; Untitled. All rights reserved.</li><li>Appmuerzo</li>-->
 								<li>&copy; Appmuerzo</li>
 								<li>Design: <a href="http://templated.co" target="_blank">TEMPLATED</a></li>
 								<li>Images: <a href="http://unsplash.com" target="_blank">Unsplash</a> <a href="https://picjumbo.com/just-soup/" target="_blank">picjumbo</a></li>
+                                <li>Change language: <a href="indexEN.html">English</a></li>
 							</ul>
 						</div>
-						<div class="6u$ 12u$(medium)">
+						<div class="4u$ 12u$(medium)">
 							<ul class="icons">
 								<li>
 									<a class="icon rounded fa-facebook" href="https://www.facebook.com/Appmuerzo" target="_blank"><span class="label">Facebook</span></a>
