--- a/indexEN.html
+++ b/indexEN.html
@@ -128,7 +128,7 @@
 							<section class="3u$ 6u$(medium) 12u$(xsmall) profile" style="text-align:center">
 								<!--<img src="images/profile_placeholder.gif" alt="" />-->
                                 <i class="icon medium rounded color6 fa-users fa-2x" ></i>
-								<h4>Avoid unnecessary queques</h4>
+								<h4>Avoid unnecessary queues</h4>
 								<!--<p>Et natus sapiente</p>-->
 							</section>
 						</div>
