--- a/indexEN.html
+++ b/indexEN.html
@@ -57,7 +57,7 @@
 		<!-- Banner -->
 			<section id="banner">
 				<h2>Appmuerzo</h2>
-				<p>New App</p>
+				<p>App</p>
 				<ul class="actions">
 					<li>
 						<a href="#one" class="button big">Details...</a>
@@ -69,7 +69,7 @@
 			<section id="one" class="wrapper style1 special">
 				<div class="container">
 					<header class="major">
-						<h2>New app, available for Windows Phone</h2>
+						<h2>App available for Windows Phone</h2>
 						<p>It's free, no login required</p>
 					</header>
 					<div class="row 150%">
