--- a/indexEN.html
+++ b/indexEN.html
@@ -5,95 +5,77 @@
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 -->
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Appmuerzo</title>
-	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<meta name="description" content="" />
-	<meta name="keywords" content="" />
-	<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
-	<script src="js/jquery.min.js"></script>
-	<script src="js/skel.min.js"></script>
-	<script src="js/skel-layers.min.js"></script>
-	<script src="js/init.js"></script>
-	<noscript>
-		<link rel="stylesheet" href="css/skel.css" />
-		<link rel="stylesheet" href="css/style.css" />
-		<link rel="stylesheet" href="css/style-xlarge.css" />
-	</noscript>
-	<!-- fotorama.css & fotorama.js. -->
-	<link  href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet"> <!-- 3 KB -->
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script> <!-- 16 KB -->
-	<!---->
-	<script>
-	$(document).ready(function () {
-		$('a[href^="#"]').on('click', function (e) {
-			e.preventDefault();
-			var target = this.hash;
-			var $target = $(target);
-			$('html, body').stop().animate({
-				'scrollTop': $target.offset().top
-			}, 500, 'swing');
-		});
-	});
-	</script>
-	<!--GA-->
-	<script>
-	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-	ga('create', 'UA-75608043-1', 'auto');
-	ga('send', 'pageview');
-	</script>
-	<!---->
-</head>
-<body class="landing">
-	<!-- Header -->
-	<header id="header">
-		<h1><a href="index.html">Appmuerzo</a></h1>
-		<nav id="nav">
-			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="TerminosyCondiciones.html">T&C</a></li>
-				<li><a href="Blog.html">Blog</a></li>
-				<!--<li><a href="elements.html">Elements</a></li>-->
-				<li><a href="http://www.windowsphone.com/es-pe/store/app/appmuerzo/89444097-a36a-4c49-9439-17d60b01a019" target="_blank">Download</a></li>
-			</ul>
-		</nav>
-	</header>
-	<!-- Banner -->
-	<section id="banner">
-		<h2>Appmuerzo</h2>
-		<p>App</p>
-		<ul class="actions">
-			<li>
-				<a href="#one" class="button big">Details...</a>
-			</li>
-		</ul>
-	</section>
-	<!-- One -->
-	<section id="one" class="wrapper style1 special">
-		<div class="container">
-			<header class="major">
-				<h2>App available for Windows Phone</h2>
-				<p>It's free, no login required</p>
+	<head>
+		<meta charset="UTF-8">
+		<title>Appmuerzo</title>
+		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<meta name="description" content="" />
+		<meta name="keywords" content="" />
+		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
+		<script src="js/jquery.min.js"></script>
+		<script src="js/skel.min.js"></script>
+		<script src="js/skel-layers.min.js"></script>
+		<script src="js/init.js"></script>
+		<noscript>
+			<link rel="stylesheet" href="css/skel.css" />
+			<link rel="stylesheet" href="css/style.css" />
+			<link rel="stylesheet" href="css/style-xlarge.css" />
+		</noscript>
+		<!-- fotorama.css & fotorama.js. -->
+		<link  href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet"> <!-- 3 KB -->
+		<script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script> <!-- 16 KB -->
+		<!---->
+        <script src="js/animation.js"></script>
+	</head>
+	<body class="landing">
+
+		<!-- Header -->
+			<header id="header">
+				<h1><a href="index.html">Appmuerzo</a></h1>
+				<nav id="nav">
+					<ul>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="TerminosyCondiciones.html">T&C</a></li>
+						<li><a href="Blog.html">Blog</a></li>
+						<!--<li><a href="elements.html">Elements</a></li>-->
+                        <li><a href="http://www.windowsphone.com/es-pe/store/app/appmuerzo/89444097-a36a-4c49-9439-17d60b01a019" target="_blank">Download</a></li>
+					</ul>
+				</nav>
 			</header>
-			<div class="row 150%">
-				<div class="6u 12u$(medium)">
-					<section class="box">
-						<i class="icon big rounded color1 fa-map-marker"></i>
-						<h3>Do you work at a restaurant?</h3>
-						<p>Publish the menu of the day, the restaurant will automatically appear in the map system.</p>
-					</section>
-				</div>
-				<div class="6u 12u$(medium)">
-					<section class="box">
-						<i class="icon big rounded color9 fa-cutlery"></i>
-						<h3>Users</h3>
-						<p>locate nearby restaurants and see the daily menu.<br /><br /></p>
-					</section>
-				</div>
+
+		<!-- Banner -->
+			<section id="banner">
+				<h2>Appmuerzo</h2>
+				<p>App</p>
+				<ul class="actions">
+					<li>
+						<a href="#one" class="button big">Details...</a>
+					</li>
+				</ul>
+			</section>
+
+		<!-- One -->
+			<section id="one" class="wrapper style1 special">
+				<div class="container">
+					<header class="major">
+						<h2>App available for Windows Phone</h2>
+						<p>It's free, no login required</p>
+					</header>
+					<div class="row 150%">
+						<div class="6u 12u$(medium)">
+							<section class="box">
+								<i class="icon big rounded color1 fa-map-marker"></i>
+								<h3>Do you work at a restaurant?</h3>
+								<p>Publish the menu of the day, the restaurant will automatically appear in the map system.</p>
+							</section>
+						</div>
+						<div class="6u 12u$(medium)">
+							<section class="box">
+								<i class="icon big rounded color9 fa-cutlery"></i>
+								<h3>Users</h3>
+								<p>locate nearby restaurants and see the daily menu.<br /><br /></p>
+							</section>
+						</div>
 				<!--		<div class="4u$ 12u$(medium)">
 							<section class="box">
 								<i class="icon big rounded color6 fa-rocket"></i>
@@ -104,7 +86,8 @@
 					</div>
 				</div>
 			</section>
-			<!-- Two -->
+
+		<!-- Two -->
 			<section id="two" class="wrapper style2 special">
 				<div class="container">
 					<header class="major">
@@ -115,25 +98,25 @@
 						<div class="row">
 							<section class="3u 6u(medium) 12u$(xsmall) profile" style="text-align:center">
 								<!--<img src="images/profile_placeholder.gif" alt="" />-->
-								<i class="icon medium rounded color6 fa-file-o fa-2x" ></i>
+                                <i class="icon medium rounded color6 fa-file-o fa-2x" ></i>
 								<h4>Avoid print flyers</h4>
 								<!--<p>Lorem ipsum dolor</p>-->
 							</section>
 							<section class="3u 6u$(medium) 12u$(xsmall) profile" style="text-align:center">
 								<!--<img src="images/profile_placeholder.gif" alt="" />-->
-								<i class="icon medium rounded color9 fa-user-plus fa-2x" ></i>
+                                <i class="icon medium rounded color9 fa-user-plus fa-2x" ></i>
 								<h4>Attract customers</h4>
 								<!--<p>Ullam nihil repudi</p>-->
 							</section>
 							<section class="3u 6u(medium) 12u$(xsmall) profile" style="text-align:center">
 								<!--<img src="images/profile_placeholder.gif" alt="" />-->
-								<i class="icon medium rounded color9 fa-clock-o fa-2x" ></i>
+                                <i class="icon medium rounded color9 fa-clock-o fa-2x" ></i>
 								<h4>Reduce decision time</h4>
 								<!--<p>Harum corrupti quia</p>-->
 							</section>
 							<section class="3u$ 6u$(medium) 12u$(xsmall) profile" style="text-align:center">
 								<!--<img src="images/profile_placeholder.gif" alt="" />-->
-								<i class="icon medium rounded color6 fa-users fa-2x" ></i>
+                                <i class="icon medium rounded color6 fa-users fa-2x" ></i>
 								<h4>Avoid unnecessary queues</h4>
 								<!--<p>Et natus sapiente</p>-->
 							</section>
@@ -143,28 +126,31 @@
 						<p>The service runs in Microsoft Azure, find more <a href="http://azure.microsoft.com/es-es/overview/what-is-azure/" target="_blank" style="color:blue">here</a></p>
 						<ul class="actions">
 							<li>
-								<a href="https://www.microsoft.com/store/apps/9nblggh2k3t6"><img src="https://cmsresources.windowsphone.com/devcenter/en-us/legacy_v1/img/badgegenerator/English_wstore_cyan_258x67.png" alt="Download from Windows Store" /></a>
-								<!--<a href="http://www.windowsphone.com/es-pe/store/app/appmuerzo/89444097-a36a-4c49-9439-17d60b01a019" target="_blank" class="button big">Descargar</a>-->
+                                <a href="https://www.microsoft.com/store/apps/9nblggh2k3t6"><img src="https://cmsresources.windowsphone.com/devcenter/en-us/legacy_v1/img/badgegenerator/English_wstore_cyan_258x67.png" alt="Download from Windows Store" /></a>
+								<!--<a href="http://www.windowsphone.com/es-pe/store/app/appmuerzo/89444097-a36a-4c49-9439-17d60b01a019" target="_blank" class="button big">Download</a>-->
 							</li>
 						</ul>
 					</footer>
 				</div>
 			</section>
-			<!-- Three -->
-			<!-- Footer -->
+
+		<!-- Three -->
+
+
+		<!-- Footer -->
 			<footer id="footer">
 				<div class="container" style="text-align:center">
-					<h2 class="major" style="text-align:center">Screenshots</h2>
-					<!--<p  style="text-align:center">Pr&oacute;ximamente</p>-->
-					<!-- 2. Add images to <div class="fotorama"></div>. -->
-					<div class="fotorama" data-loop="true" data-autoplay="true" style="display: inline-block;">
-						<img src="http://appmuerzo.com/images/wp_ss_20150624_0001.jpg">
-						<img src="http://appmuerzo.com/images/wp_ss_20150624_0003.jpg">
-						<img src="http://appmuerzo.com/images/wp_ss_20150624_0007.jpg">
-						<img src="http://appmuerzo.com/images/wp_ss_20150624_0008.jpg">
-					</div>
-					<!---->
-					<section class="links">
+						<h2 class="major" style="text-align:center">Screenshots</h2>
+                        <!--<p  style="text-align:center">Pr&oacute;ximamente</p>-->
+								<!-- 2. Add images to <div class="fotorama"></div>. -->
+								<div class="fotorama" data-loop="true" data-autoplay="true" style="display: inline-block;">
+							          <img src="http://appmuerzo.com/images/wp_ss_20150624_0001.jpg">
+							          <img src="http://appmuerzo.com/images/wp_ss_20150624_0003.jpg">
+								  <img src="http://appmuerzo.com/images/wp_ss_20150624_0007.jpg">
+								  <img src="http://appmuerzo.com/images/wp_ss_20150624_0008.jpg">
+								</div>
+								<!---->
+			        <section class="links">
 					</section>
 					<div class="row">
 						<div class="8u 12u$(medium)">
@@ -173,7 +159,7 @@
 								<li>&copy; Appmuerzo</li>
 								<li>Design: <a href="http://templated.co" target="_blank">TEMPLATED</a></li>
 								<li>Images: <a href="http://unsplash.com" target="_blank">Unsplash</a> <a href="https://picjumbo.com/just-soup/" target="_blank">picjumbo</a></li>
-								<li>Cambiar idioma: <a href="index.html">Espa&ntilde;ol</a></li>
+                                <li>Cambiar idioma: <a href="index.html">Espa&ntilde;ol</a></li>
 							</ul>
 						</div>
 						<div class="4u$ 12u$(medium)">
@@ -181,11 +167,12 @@
 								<li>
 									<a class="icon rounded fa-facebook" href="https://www.facebook.com/Appmuerzo" target="_blank"><span class="label">Facebook</span></a>
 								</li>
-								<li><a href="https://www.facebook.com/Appmuerzo" target="_blank"><p>Find us on facebook</p></a></li>
+                                <li><a href="https://www.facebook.com/Appmuerzo" target="_blank"><p>Find us on facebook</p></a></li>
 							</ul>
 						</div>
 					</div>
 				</div>
 			</footer>
-		</body>
-		</html>
+
+	</body>
+</html>
