--- a/indexEN.html
+++ b/indexEN.html
@@ -26,6 +26,16 @@
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script> <!-- 16 KB -->
 		<!---->
         <script src="js/animation.js"></script>
+        <!--GA-->
+        <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        ga('create', 'UA-75608043-1', 'auto');
+        ga('send', 'pageview');
+        </script>
+        <!---->
 	</head>
 	<body class="landing">
 
@@ -38,7 +48,7 @@
 						<li><a href="TerminosyCondiciones.html">T&C</a></li>
 						<li><a href="Blog.html">Blog</a></li>
 						<!--<li><a href="elements.html">Elements</a></li>-->
-                        <li><a href="http://www.windowsphone.com/es-pe/store/app/appmuerzo/89444097-a36a-4c49-9439-17d60b01a019" target="_blank">Download</a></li>
+                        <li><a href="http://www.windowsphone.com/en-us/store/app/appmuerzo/89444097-a36a-4c49-9439-17d60b01a019" target="_blank">Download</a></li>
 					</ul>
 				</nav>
 			</header>
