--- a/indexEN.html
+++ b/indexEN.html
@@ -48,7 +48,7 @@
 						<li><a href="TerminosyCondiciones.html">T&C</a></li>
 						<li><a href="Blog.html">Blog</a></li>
 						<!--<li><a href="elements.html">Elements</a></li>-->
-                        <li><a href="http://www.windowsphone.com/en-us/store/app/appmuerzo/89444097-a36a-4c49-9439-17d60b01a019" target="_blank">Download</a></li>
+                        <li><a href="https://www.microsoft.com/en-us/store/apps/appmuerzo/9nblggh2k3t6" target="_blank">Download</a></li>
 					</ul>
 				</nav>
 			</header>
